xtensa: fix kernel register spilling

--- a/public/css/nolimitgpt.webflow.css
+++ b/public/css/nolimitgpt.webflow.css
@@ -2481,4 +2481,36 @@ a {
   }
 
   .newsletter-field {
-    wi
+    width: 100%;
+  }
+
+  .copyright.white {
+    text-align: center;
+    margin-bottom: 15px;
+  }
+
+  .footer-base-container {
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .cta-section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+
+  .newsletter-block {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+
+  .content-cta {
+    font-size: 42px;
+  }
+
+  .feature-wrap {
+    flex-wrap: wrap;
+  }
+
+  .feature-colu
